--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.36",
+    "@vuepress/plugin-prismjs": "^2.0.0-beta.36",
+    "@vuepress/plugin-search": "^2.0.0-beta.36",
     "vuepress": "^2.0.0-beta.36"
   },
   "scripts": {
