--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Build VuePress site
         run: yarn docs:build
 
+      - name: Add CNAME
+        run: cd docs/.vuepress/dist && echo "docs.packagepeak.app" > CNAME
+
       # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
